Bug 819280 - Change NS_ASSERTION to MOZ_STATIC_ASSERT r=trev.saunders